refactor: script for multiple file upload

--- a/search/templates/search/widgets/multiple_file_input.html
+++ b/search/templates/search/widgets/multiple_file_input.html
@@ -1,4 +1,11 @@
 {% include "django/forms/widgets/input.html" %}
-<label for="{{ widget.attrs.id }}"><span>Choose a files</span></label>
+<label for="{{ widget.attrs.id }}"><span>Выбрать файлы</span></label>
+<p style="width: 100%;margin: 0;display: flex;text-align: center;">
+    Мы не хотим вас ограничивать, но загрузка не быстрая, пощадите нас и наш сервер, за раз лучше 35 изображений максимально
+</p>
+<div class="sad_alert" style="visibility: hidden;">
+    <span>Все же решили не щадить</span>
+    <img src="https://emoji.slack-edge.com/T03ACLDU5/sadge/64a319642d1cbe51.png" width="25" />
+</div>
 
 
